--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -14,7 +14,8 @@
     "systemAdmin": "Amministratore di Sistema",
     "partnerAdmin": "Amministratore Partner",
     "member": "Membro",
-    "contracts": "Contratti"
+    "contracts": "Contratti",
+    "photoGallery": "Galleria Foto"
   },
   "customers": {
     "title": "Clienti",
@@ -127,7 +128,37 @@
     "standingDeskExample": "Zona Scrivanie in Piedi",
     "conferenceRoomExample": "Sala Conferenze Alpha (12 persone)",
     "phoneBoothExample": "Cabina Telefonica 1",
-    "trainingRoomExample": "Sala Formazione B"
+    "trainingRoomExample": "Sala Formazione B",
+    "images": "Immagini",
+    "totalImages": "Immagini Totali",
+    "noImages": "Nessuna Immagine",
+    "exteriorImages": "Foto Esterne",
+    "deskImages": "Aree Scrivanie",
+    "meetingRoomImages": "Sale Riunioni",
+    "locationImages": "Immagini Sede",
+    "imagesSummary": "Riepilogo Immagini",
+    "addImages": "Aggiungi Immagini",
+    "dropImagesHere": "Trascina le immagini qui o clicca per sfogliare",
+    "imageRequirements": "JPG, PNG, WebP fino a 5MB ciascuna",
+    "newImage": "Nuova",
+    "imageDescription": "Descrizione immagine",
+    "noImagesUploaded": "Nessuna immagine caricata",
+    "maxImagesReached": "Massimo {max} immagini raggiunto",
+    "maxImagesExceeded": "Non è possibile aggiungere più di {max} immagini",
+    "imageUploadTips": "Suggerimenti Caricamento Immagini",
+    "tipSupportedFormats": "Formati supportati: JPG, PNG, WebP",
+    "tipMaxSize": "Dimensione massima file: 5MB per immagine",
+    "tipBestQuality": "Usa immagini di alta qualità per risultati migliori",
+    "tipDescriptiveNames": "Aggiungi testo alternativo descrittivo per l'accessibilità",
+    "zoomIn": "Ingrandisci",
+    "zoomOut": "Riduci",
+    "previousImage": "Immagine Precedente",
+    "nextImage": "Immagine Successiva",
+    "moveLeft": "Sposta a Sinistra",
+    "moveRight": "Sposta a Destra",
+    "uploadQualityImages": "Carica immagini di qualità per mostrare il tuo spazio",
+    "resources": "Risorse",
+    "exterior": "Esterno"
   },
   "auth": {
     "signIn": "Accedi",
@@ -175,8 +206,12 @@
     "welcomeBack": "Bentornato",
     "totalPartners": "Totale Partner",
     "activeLocations": "Sedi Attive",
-    "totalUsers": "Totale Utenti",
-    "monthlyOverview": "Panoramica Mensile"
+    "totalUsers": "Totale Utenti", 
+    "monthlyOverview": "Panoramica Mensile",
+    "quickActions": "Azioni Rapide",
+    "contractsOverview": "I Tuoi Contratti",
+    "packageEntriesOverview": "Ingressi Pacchetti",
+    "bookingsOverview": "Le Tue Prenotazioni"
   },
   "partners": {
     "title": "Partner",
@@ -325,7 +360,10 @@
     "pleaseWaitForAvailabilityCheck": "Attendere il controllo disponibilità",
     "resourceNotAvailable": "La risorsa selezionata non è disponibile per il periodo scelto",
     "errorLoadingBookings": "Errore nel caricamento delle prenotazioni",
-    "errorLoadingLocationData": "Errore nel caricamento dei dati della sede"
+    "errorLoadingLocationData": "Errore nel caricamento dei dati della sede",
+    "imagesUploadedSuccessfully": "{count} immagini caricate con successo",
+    "someImagesFailedToUpload": "{count} immagini non sono riuscite a caricarsi",
+    "errorUploadingImages": "Errore nel caricamento delle immagini"
   },
   "services": {
     "title": "Servizi",
@@ -430,7 +468,16 @@
     "fullDayEntry": "Giornata Intera (1 ingresso)",
     "halfDayEntry": "Mezza Giornata (0.5 ingressi)",
     "noEntriesRemaining": "Nessun Ingresso",
-    "notAvailable": "Non Disponibile"
+    "notAvailable": "Non Disponibile",
+    "totalEntries": "Ingressi Totali",
+    "usedEntries": "Ingressi Utilizzati",
+    "remainingEntries": "Ingressi Rimanenti",
+    "packageEntries": "Ingressi Pacchetti",
+    "usageProgress": "Progresso Utilizzo",
+    "lowEntriesWarning": "Attenzione: Pochi ingressi rimanenti!",
+    "usePackageEntries": "Utilizza i tuoi ingressi pacchetto",
+    "packageReservations": "Prenotazioni Pacchetto",
+    "bookPackage": "Prenota Pacchetto"
   },
   "contracts": {
     "title": "Contratti",
@@ -501,7 +548,10 @@
     "pdfGeneratedSuccessfully": "PDF generato con successo!",
     "errorGeneratingPDF": "Errore nella generazione del PDF. Riprova.",
     "receiptFooter": "Questo documento è una ricevuta del contratto di servizio. Non ha valore fiscale.",
-    "generatedOn": "Generato il"
+    "generatedOn": "Generato il",
+    "viewContracts": "Visualizza Contratti",
+    "packageContracts": "Contratti Pacchetto",
+    "subscriptionContracts": "Contratti Abbonamento"
   },
   "placeholders": {
     "emailPlaceholder": "Indirizzo email",
@@ -555,7 +605,11 @@
     "bookings": "prenotazioni",
     "noBookingsForDay": "Nessuna prenotazione per questo giorno",
     "noBookingsFound": "Nessuna prenotazione trovata per il periodo selezionato",
-    "more": "altro"
+    "more": "altro",
+    "activeBookings": "Prenotazioni Attive",
+    "upcomingBookings": "Prenotazioni Future",
+    "viewBookings": "Visualizza Prenotazioni", 
+    "totalBookings": "Prenotazioni Totali"
   },
   "calendar": {
     "sunday": "Dom",
@@ -565,6 +619,22 @@
     "thursday": "Gio",
     "friday": "Ven",
     "saturday": "Sab"
+  },
+  "photoGallery": {
+    "title": "Galleria Foto",
+    "filters": "Filtri",
+    "totalImages": "Immagini Totali",
+    "locations": "Sedi",
+    "filterByCategory": "Categoria",
+    "filterByLocation": "Sede",
+    "allCategories": "Tutte le Categorie",
+    "allLocations": "Tutte le Sedi",
+    "clearFilters": "Cancella Filtri",
+    "noImages": "Nessuna Immagine Trovata",
+    "noImagesWithFilters": "Prova a modificare i filtri per vedere più immagini.",
+    "noImagesAvailable": "Non sono ancora state caricate immagini.",
+    "errorLoadingGallery": "Errore nel caricamento della galleria foto",
+    "errorMessage": "Errore"
   },
   "app": {
     "appName": "Gestione Coworking",
