--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -158,7 +158,47 @@
     "moveRight": "Move Right",
     "uploadQualityImages": "Upload quality images to showcase your space",
     "resources": "Resources",
-    "exterior": "Exterior"
+    "exterior": "Exterior",
+    "basicInfo": "Basic Info",
+    "address": "Address",
+    "mapLocation": "Map Location",
+    "contactDetails": "Contact Details",
+    "phoneNumber": "Phone Number",
+    "emailAddress": "Email Address",
+    "addressInformation": "Address Information",
+    "streetAddress": "Street Address", 
+    "postalCode": "Postal Code",
+    "city": "City",
+    "country": "Country",
+    "timezone": "Timezone",
+    "coordinates": "Coordinates",
+    "latitude": "Latitude",
+    "longitude": "Longitude",
+    "findOnMap": "Find on Map",
+    "geocoding": "Geocoding",
+    "addressTips": "Address Tips",
+    "tipCompleteAddress": "Provide complete address for better accuracy",
+    "tipUseGeocode": "Use 'Find on Map' to get precise coordinates",
+    "tipVerifyOnMap": "Always verify the location on the map",
+    "tipContactInfo": "Add contact info specific to this location",
+    "mapInstructions": "Click on the map to place a marker at the exact location",
+    "clickToSelectLocation": "Click to select location",
+    "lat": "Lat",
+    "lng": "Lng",
+    "centerOnLocation": "Center on Location",
+    "resetLocation": "Reset Location",
+    "loadingMap": "Loading Map",
+    "mapLoadError": "Map Load Error",
+    "viewOnMap": "View on Map",
+    "contactInformation": "Contact Information",
+    "noContactInfoYet": "No contact info yet",
+    "noAddressYet": "No address yet",
+    "addressOrCityRequired": "Address or city is required for geocoding",
+    "addressGeocodedSuccessfully": "Address geocoded successfully",
+    "addressNotFound": "Address not found. Please check the address and try again.",
+    "geocodingError": "Error occurred while geocoding address",
+    "mapError": "Error loading map",
+    "confirmDeleteLocation": "Are you sure you want to delete this location?"
   },
   "auth": {
     "signIn": "Sign In",
@@ -362,7 +402,8 @@
     "errorLoadingLocationData": "Error loading location data",
     "imagesUploadedSuccessfully": "{count} images uploaded successfully",
     "someImagesFailedToUpload": "{count} images failed to upload",
-    "errorUploadingImages": "Error uploading images"
+    "errorUploadingImages": "Error uploading images",
+    "invalidEmailFormat": "Invalid email format"
   },
   "services": {
     "title": "Services",
@@ -581,7 +622,11 @@
     "serviceNamePlaceholder": "Enter service name",
     "serviceDescriptionPlaceholder": "Describe what this service includes...",
     "resourceNamePlaceholder": "e.g., Hot Desks, Small Meeting Room",
-    "resourceDescriptionPlaceholder": "Describe this resource type..."
+    "resourceDescriptionPlaceholder": "Describe this resource type...",
+    "phoneNumberPlaceholder": "e.g., +39 02 1234567",
+    "streetAddressPlaceholder": "e.g., Via Roma 123",
+    "postalCodePlaceholder": "e.g., 20121",
+    "locationDescriptionPlaceholder": "Describe special features, access instructions, or additional details about this location..."
   },
   "bookings": {
     "title": "Bookings Calendar",
@@ -633,7 +678,17 @@
     "noImagesWithFilters": "Try adjusting your filters to see more images.",
     "noImagesAvailable": "No images have been uploaded yet.",
     "errorLoadingGallery": "Error loading photo gallery",
-    "errorMessage": "Error"
+    "errorMessage": "Error",
+    "galleryView": "Gallery",
+    "locationsView": "Locations",
+    "searchLocations": "Search Locations",
+    "searchPlaceholder": "Search by location name, city, or address...",
+    "images": "images",
+    "viewDetails": "View Details",
+    "contactInformation": "Contact Information",
+    "getDirections": "Get Directions",
+    "callLocation": "Call Location",
+    "emailLocation": "Email Location"
   },
   "app": {
     "appName": "Coworking Management",
