--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -158,7 +158,47 @@
     "moveRight": "Sposta a Destra",
     "uploadQualityImages": "Carica immagini di qualità per mostrare il tuo spazio",
     "resources": "Risorse",
-    "exterior": "Esterno"
+    "exterior": "Esterno",
+    "basicInfo": "Info Base",
+    "address": "Indirizzo",
+    "mapLocation": "Posizione Mappa",
+    "contactDetails": "Dettagli Contatto",
+    "phoneNumber": "Numero Telefono",
+    "emailAddress": "Indirizzo Email",
+    "addressInformation": "Informazioni Indirizzo",
+    "streetAddress": "Indirizzo",
+    "postalCode": "CAP",
+    "city": "Città",
+    "country": "Paese",
+    "timezone": "Fuso Orario",
+    "coordinates": "Coordinate",
+    "latitude": "Latitudine",
+    "longitude": "Longitudine", 
+    "findOnMap": "Trova su Mappa",
+    "geocoding": "Geocodifica",
+    "addressTips": "Suggerimenti Indirizzo",
+    "tipCompleteAddress": "Fornisci un indirizzo completo per una migliore precisione",
+    "tipUseGeocode": "Usa 'Trova su Mappa' per ottenere coordinate precise",
+    "tipVerifyOnMap": "Verifica sempre la posizione sulla mappa",
+    "tipContactInfo": "Aggiungi info di contatto specifiche per questa sede",
+    "mapInstructions": "Clicca sulla mappa per posizionare un marker nella posizione esatta",
+    "clickToSelectLocation": "Clicca per selezionare la posizione",
+    "lat": "Lat",
+    "lng": "Lng",
+    "centerOnLocation": "Centra su Posizione",
+    "resetLocation": "Reimposta Posizione",
+    "loadingMap": "Caricamento Mappa",
+    "mapLoadError": "Errore Caricamento Mappa",
+    "viewOnMap": "Visualizza su Mappa",
+    "contactInformation": "Informazioni Contatto",
+    "noContactInfoYet": "Nessuna info contatto ancora",
+    "noAddressYet": "Nessun indirizzo ancora",
+    "addressOrCityRequired": "Indirizzo o città è richiesto per la geocodifica",
+    "addressGeocodedSuccessfully": "Indirizzo geocodificato con successo",
+    "addressNotFound": "Indirizzo non trovato. Controlla l'indirizzo e riprova.",
+    "geocodingError": "Errore durante la geocodifica dell'indirizzo",
+    "mapError": "Errore caricamento mappa",
+    "confirmDeleteLocation": "Sei sicuro di voler eliminare questa sede?"
   },
   "auth": {
     "signIn": "Accedi",
@@ -363,7 +403,8 @@
     "errorLoadingLocationData": "Errore nel caricamento dei dati della sede",
     "imagesUploadedSuccessfully": "{count} immagini caricate con successo",
     "someImagesFailedToUpload": "{count} immagini non sono riuscite a caricarsi",
-    "errorUploadingImages": "Errore nel caricamento delle immagini"
+    "errorUploadingImages": "Errore nel caricamento delle immagini",
+    "invalidEmailFormat": "Formato email non valido"
   },
   "services": {
     "title": "Servizi",
@@ -582,7 +623,11 @@
     "billingCountryPlaceholder": "Paese fatturazione",
     "notesPlaceholder": "Note aggiuntive o commenti",
     "serviceNamePlaceholder": "Inserisci nome servizio",
-    "serviceDescriptionPlaceholder": "Descrivi cosa include questo servizio..."
+    "serviceDescriptionPlaceholder": "Descrivi cosa include questo servizio...",
+    "phoneNumberPlaceholder": "es. +39 02 1234567",
+    "streetAddressPlaceholder": "es. Via Roma 123",
+    "postalCodePlaceholder": "es. 20121",
+    "locationDescriptionPlaceholder": "Descrivi caratteristiche speciali, istruzioni di accesso o dettagli aggiuntivi su questa sede..."
   },
   "bookings": {
     "title": "Calendario Prenotazioni",
@@ -634,7 +679,17 @@
     "noImagesWithFilters": "Prova a modificare i filtri per vedere più immagini.",
     "noImagesAvailable": "Non sono ancora state caricate immagini.",
     "errorLoadingGallery": "Errore nel caricamento della galleria foto",
-    "errorMessage": "Errore"
+    "errorMessage": "Errore",
+    "galleryView": "Galleria",
+    "locationsView": "Sedi",
+    "searchLocations": "Cerca Sedi",
+    "searchPlaceholder": "Cerca per nome sede, città o indirizzo...",
+    "images": "immagini",
+    "viewDetails": "Visualizza Dettagli",
+    "contactInformation": "Informazioni Contatto",
+    "getDirections": "Indicazioni Stradali",
+    "callLocation": "Chiama Sede",
+    "emailLocation": "Email Sede"
   },
   "app": {
     "appName": "Gestione Coworking",
