V 0.300 Archived contract and finale delete

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,8 @@
     "partnerAdmin": "Partner Administrator",
     "member": "Member",
     "contracts": "Contracts",
-    "photoGallery": "Photo Gallery"
+    "photoGallery": "Photo Gallery",
+    "archivedContracts": "Archived Contracts"
   },
   "customers": {
     "title": "Customers",
@@ -606,7 +607,35 @@
     "generatedOn": "Generated on",
     "viewContracts": "View Contracts",
     "packageContracts": "Package Contracts",
-    "subscriptionContracts": "Subscription Contracts"
+    "subscriptionContracts": "Subscription Contracts",
+    "archivedContracts": "Archived Contracts",
+    "manageYourArchivedContracts": "View your archived service contracts",
+    "managePartnerArchivedContracts": "Manage archived contracts for your partner customers",
+    "noArchivedContractsFound": "No archived contracts found.",
+    "archivedInfo": "Archived Info",
+    "archivedOn": "Archived on",
+    "reason": "Reason",
+    "archived": "Archived",
+    "restoreContract": "Restore Contract",
+    "confirmRestore": "Confirm Restore",
+    "restoreContractWarning": "This will restore the contract and make it active again. All related bookings and reservations will also be restored.",
+    "contractRestoredSuccessfully": "Contract restored successfully",
+    "errorRestoringContract": "Error restoring contract",
+    "deletePermanently": "Delete Permanently",
+    "confirmPermanentDelete": "Confirm Permanent Delete",
+    "permanentDelete": "Permanent Delete",
+    "permanentDeleteWarning": "This action will permanently delete the contract and all its data. This cannot be undone.",
+    "permanentDeleteNote": "This will permanently remove the contract",
+    "fromDatabase": "from the database",
+    "warning": "WARNING",
+    "contractDeletedPermanently": "Contract deleted permanently",
+    "errorDeletingContract": "Error deleting contract permanently",
+    "contractArchivedSuccessfully": "Contract archived successfully",
+    "errorArchivingContract": "Error archiving contract",
+    "totalArchived": "Total Archived",
+    "archivedThisMonth": "This Month",
+    "archivedThisYear": "This Year",
+    "totalArchivedValue": "Total Value"
   },
   "placeholders": {
     "emailPlaceholder": "Email address",
