--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -15,7 +15,8 @@
     "partnerAdmin": "Amministratore Partner",
     "member": "Membro",
     "contracts": "Contratti",
-    "photoGallery": "Galleria Foto"
+    "photoGallery": "Galleria Foto",
+    "archivedContracts": "Contratti Archiviati"
   },
   "customers": {
     "title": "Clienti",
@@ -607,7 +608,35 @@
     "generatedOn": "Generato il",
     "viewContracts": "Visualizza Contratti",
     "packageContracts": "Contratti Pacchetto",
-    "subscriptionContracts": "Contratti Abbonamento"
+    "subscriptionContracts": "Contratti Abbonamento",
+    "archivedContracts": "Contratti Archiviati",
+    "manageYourArchivedContracts": "Visualizza i tuoi contratti di servizio archiviati",
+    "managePartnerArchivedContracts": "Gestisci i contratti archiviati per i clienti del tuo partner",
+    "noArchivedContractsFound": "Nessun contratto archiviato trovato.",
+    "archivedInfo": "Info Archiviazione",
+    "archivedOn": "Archiviato il",
+    "reason": "Motivo",
+    "archived": "Archiviato",
+    "restoreContract": "Ripristina Contratto",
+    "confirmRestore": "Conferma Ripristino",
+    "restoreContractWarning": "Questo ripristinerà il contratto e lo renderà di nuovo attivo. Anche tutte le prenotazioni e le riservazioni correlate verranno ripristinate.",
+    "contractRestoredSuccessfully": "Contratto ripristinato con successo",
+    "errorRestoringContract": "Errore nel ripristino del contratto",
+    "deletePermanently": "Elimina Definitivamente",
+    "confirmPermanentDelete": "Conferma Eliminazione Definitiva",
+    "permanentDelete": "Eliminazione Definitiva",
+    "permanentDeleteWarning": "Questa azione eliminerà definitivamente il contratto e tutti i suoi dati. Questa operazione non può essere annullata.",
+    "permanentDeleteNote": "Questo rimuoverà definitivamente il contratto",
+    "fromDatabase": "dal database",
+    "warning": "ATTENZIONE",
+    "contractDeletedPermanently": "Contratto eliminato definitivamente",
+    "errorDeletingContract": "Errore nell'eliminazione definitiva del contratto",
+    "contractArchivedSuccessfully": "Contratto archiviato con successo",
+    "errorArchivingContract": "Errore nell'archiviazione del contratto",
+    "totalArchived": "Totale Archiviati",
+    "archivedThisMonth": "Questo Mese",
+    "archivedThisYear": "Quest'Anno",
+    "totalArchivedValue": "Valore Totale"
   },
   "placeholders": {
     "emailPlaceholder": "Indirizzo email",
